[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/EnemySpawnPoint.gd" type="Script" id=1]

[node name="EnemySpawnPoint" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnPoints" type="Node" parent="."]

[node name="TriggerArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TriggerArea"]

[node name="SpawnDelay" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
[connection signal="body_entered" from="TriggerArea" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="SpawnDelay" to="." method="_on_SpawnDelay_timeout"]
